# bmo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  justfile
.github/workflows/: ci.yaml  release.yaml
docs/: agents.md  commands.md  data.md  development.md  index.md  migration-from-docket.md  web.md
examples/: demo.rs
packaging/homebrew/: README.md  bmo.rb
src/: errors.rs  lib.rs  main.rs
src/cli/: agent_init.rs  board.rs  config.rs  export.rs  import.rs  init.rs  mod.rs  next.rs  plan.rs  stats.rs  truncate.rs  version.rs  web.rs
src/cli/issue/: claim.rs  close.rs  comment.rs  create.rs  delete.rs  edit.rs  file_cmd.rs  graph.rs  label.rs  link.rs  list.rs  log_cmd.rs  mod.rs  move_cmd.rs  reopen.rs  show.rs
src/config/: mod.rs
src/db/: activity.rs  claim.rs  comments.rs  file_conflicts.rs  files.rs  impl_repo.rs  issues.rs  labels.rs  mod.rs  relations.rs  schema.rs
src/filter/: mod.rs
src/model/: activity.rs  comment.rs  conflict.rs  export.rs  file.rs  issue.rs  label.rs  mod.rs  relation.rs
src/output/: human.rs  json.rs  mod.rs
src/planner/: dag.rs  mod.rs  plan.rs  topo.rs
src/web/: handlers.rs  mod.rs  templates.rs
src/web/templates/: base.html  board.html  graph.html  issue.html  issue_list.html
src/web/templates/static/: style.css
tests/: cli.rs  cycle_detection.rs  import_export.rs  web.rs
tests/fixtures/: docket-export-sample.json  sample-export.json
