[package]
name = "bmo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Local-first SQLite-backed CLI issue tracker for AI agents"
license = "MIT"
repository = "https://github.com/erewok/bmo"
homepage = "https://github.com/erewok/bmo"
documentation = "https://docs.rs/bmo"
readme = "README.md"
keywords = ["cli", "issues", "tracker", "sqlite", "ai"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Erik Aker <eraker@gmail.com>"]

[[bin]]
name = "bmo"
path = "src/main.rs"

[dependencies]
anyhow       = "1.0.102"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4.5.60", features = ["derive", "env"] }
comfy-table  = "7"
owo-colors   = "4"
rusqlite     = { version = "0.31", features = ["bundled"] }
serde        = { version = "1.0.228", features = ["derive"] }
serde_json   = "1.0.149"
thiserror    = "2.0.18"
toml         = "0.8"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
axum         = "0.7"
async-stream = "0.3"
futures-util = { version = "0.3", default-features = false }
minijinja    = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile   = "3"
