[package]
name = "bmo"
version = "0.5.0"
edition = "2024"
rust-version = "1.91.0"
description = "Local-first SQLite-backed CLI issue tracker for AI agents"
license = "Apache-2.0"
repository = "https://github.com/erewok/bmo"
homepage = "https://github.com/erewok/bmo"
documentation = "https://docs.rs/bmo"
readme = "README.md"
keywords = ["cli", "issues", "tracker", "sqlite", "ai"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Erik Aker <eraker@gmail.com>"]

[package.metadata.docs.rs]
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "bmo"
path = "src/main.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[dependencies]
ammonia        = { version = "4" }
anyhow         = { version = "1.0.102" }
async-stream   = { version = "0.3" }
axum           = { version = "0.8.8" }
chrono         = { version = "0.4", features = ["serde"] }
clap           = { version = "4.6.0", features = ["derive", "env"] }
comfy-table    = { version = "7" }
futures-util   = { version = "0.3", default-features = false }
minijinja      = { version = "2" }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
owo-colors     = { version = "4" }
rusqlite       = { version = "0.38.0", features = ["bundled", "fallible_uint"] }
sea-query = { version = "1.0.0-rc.1" }
sea-query-rusqlite = { version = "0.8.0-rc.16", features = [
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
] }
serde          = { version = "1.0.228", features = ["derive"] }
serde_json     = { version = "1.0.149" }
thiserror      = { version = "2.0.18" }
toml           = { version = "0.9.8" }
tokio          = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }

[dev-dependencies]
assert_cmd = { version = "2.2.0" }
http       = { version = "1" }
predicates = { version = "3" }
tempfile   = { version = "3.27.0" }
tower      = { version = "0.5", features = ["util"] }
